# lstm_ppo_eet

./: .gitignore  LICENSE  README.md  apply_best_params.py  backup.docx  backup_converted.docx  eet_dataset.py  eet_parser.py  latex_to_word.py  main.py  monitor.py  pyproject.toml  报告.docx  练习工程说明.txt
.claude/agents/: dl-fullstack-researcher.md
checkpoints/: best_model.pt  final_model.pt  optuna_best_params.json  optuna_study.json  reward_normalizer.json
config/: config.yaml
datasets/: event_feature_names.txt  event_lengths.npz  event_sequences.npz  feature_names.txt  file_ids.npz  global_features.npz  labels.npz  metadata.csv  placeholder_masks.npz
src/: evaluate.py  inference.py  optuna_search.py  runner.py  train.py  utils.py
src/data/: __init__.py  dataset.py
src/env/: elevator_env.py  metrics.py
src/models/: lstm_ppo.py  policy.py
src/plc/: EET_IO_LIST_PLC输入变量.xls  EET_IO_LIST_PLC输出变量.xls  bridge.py  run_monitor.py  snap7_client.py
