[project]
name = "eet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "msgpack>=1.1.2",
    "numpy>=2.4.6",
    "optuna>=4.8.0",
    "python-snap7>=3.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "swanlab>=0.5.0",
    "torch>=2.12.0",
    "tqdm>=4.67.0",
]

[[tool.uv.index]]
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true
